fix: some overflowing of text

--- a/src/components/TextChannel/Message/Reply/index.module.scss
+++ b/src/components/TextChannel/Message/Reply/index.module.scss
@@ -21,5 +21,12 @@
 	.replyMeta {
 		display: flex;
 		gap: 8px;
+
+
+		* {
+			overflow: hidden;
+			white-space: nowrap;
+			text-overflow: ellipsis;
+		}
 	}
 }
