--- a/src/components/TextChannel/SendableReply/index.module.scss
+++ b/src/components/TextChannel/SendableReply/index.module.scss
@@ -17,6 +17,8 @@
 
 	.messageContent {
 		color: var(--tertiary-foreground);
+		overflow: hidden;
+		white-space: nowrap;
 		text-overflow: ellipsis;
 	}
 
